Works... somewhat
