# src/app/api/models/preference-owner.ts
@@ -3,5 +3,4 @@ export interface PreferenceOwner {
   id?: string;
   type?: string;
   active?: string;
-  profileIds?: Array<string>;
 }
