# src/app/api/models/profile.ts
@@ -2,6 +2,7 @@
 import { Preference } from './preference';
 export interface Profile {
   id?: string;
+  owner?: string;
   name?: string;
   version?: number;
   preferences?: Array<Preference>;
